fix VideoPreview scrollbar

--- a/src/components/sections/video-preview/VideoPreview.module.css
+++ b/src/components/sections/video-preview/VideoPreview.module.css
@@ -6,6 +6,10 @@
    /* @apply  overflow-x-auto */
 }
 
+.list {
+  @apply w-max
+}
+
 .list, .scrollbar {
 @apply px-[calc((100vw-1512px)/2+40px)] 
 }
